# shiva-protocol

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
sg-arena/: Cargo.toml
sg-arena/benches/: arena_bench.rs
sg-arena/src/: arena.rs  guards.rs  lib.rs  pool.rs  ring.rs  tests.rs
sg-capture/: Cargo.toml
sg-capture/src/: dispatch.rs  loader.rs  main.rs  metrics.rs  percpu_ring.rs  vacuum.rs
sg-common/: Cargo.toml
sg-common/src/: errors.rs  lib.rs  map_keys.rs  signal_frame.rs  tests.rs  traits.rs
sg-ebpf/: Cargo.toml  build.rs
sg-ebpf/bpf/: Cargo.toml
sg-ebpf/bpf/src/: execve_monitor.rs  packet_ingress.rs  tcp_connect.rs  tcp_fp_probe.rs
sg-ebpf/src/: caps.rs  filter.rs  lib.rs  loader.rs  main.rs  map.rs  maps.rs  proto_view.rs  tests.rs  vmlinux.rs
