[workspace]
resolver = "2"
members = [
    "sg-common",   # Phase 1 — Agent 1 — ALL other crates depend on this
    "sg-arena",    # Phase 1 — Agent 2 — memory substrate
    "sg-ebpf",     # Phase 1 — Agent 3 — kernel data path
    "sg-ebpf/bpf",

    # Phase 2 (not yet implemented — stubs only)
    # "sg-capture",
    # "sg-window",
    # "sg-ssa",
    # "sg-entropy",
    # "sg-ekf",
    # "sg-persistence",
    # "sg-bellman",

    # Phase 3–5 (blocked on Phase 2 gate)
    # "sg-tarpit", "sg-honeypot", "sg-nftables", "sg-fingerprint",
    # "sg-threads", "sg-governance", "sg-siem", "sg-runtime",
]

[workspace.package]
version  = "0.1.0"
edition  = "2021"
authors  = ["Shifting Ghost Architect Team"]
license  = "MIT"

# ─── WORKSPACE-WIDE LINTS (P10 enforcement) ───────────────────────────────────
[workspace.lints.rust]
warnings       = "deny"        # P10-10: zero tolerance
unsafe_code    = "forbid"      # P10-8 (overridden to 'allow' ONLY in sg-arena)

[workspace.lints.clippy]
unwrap_used        = "deny"    # P10-5
expect_used        = "deny"    # P10-5
too_many_lines     = "deny"    # P10-4 (threshold 60 lines)
recursive          = "deny"    # P10-7
large_stack_arrays = "deny"    # P10-3
must_use_candidate = "warn"    # P10-9 advisory

# ─── SHARED DEPENDENCIES ──────────────────────────────────────────────────────
[workspace.dependencies]
sg-common = { path = "sg-common" }
sg-arena  = { path = "sg-arena"  }
sg-ebpf   = { path = "sg-ebpf"   }

# External crates (pinned versions for reproducibility)
aya            = { version = "0.13",  default-features = false }
aya-log        = { version = "0.2",   default-features = false }
nalgebra       = { version = "0.33",  default-features = false, features = ["std"] }
crossbeam      = { version = "0.8",   default-features = false, features = ["crossbeam-channel"] }
hmac           = { version = "0.12",  default-features = false }
sha2           = { version = "0.10",  default-features = false }
hkdf           = { version = "0.12",  default-features = false }
log            = { version = "0.4",   default-features = false }
serde_json     = { version = "1.0",   default-features = false, features = ["alloc"] }
criterion = { version = "0.5", features = ["html_reports"] }


# ─── PROFILE: RELEASE (production gate) ───────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "fat"       # Cross-crate inlining — critical for zero-overhead traits
codegen-units = 1           # Maximum optimisation — single codegen unit
panic         = "abort"     # No unwinding in production (P10 spirit)
overflow-checks = true      # Arithmetic overflow = abort (no silent wrapping)
strip         = false       # Keep symbols for Valgrind/perf profiling


[profile.dev]
panic = "abort"
# ─── PROFILE: BENCH ───────────────────────────────────────────────────────────
[profile.bench]
inherits      = "release"
debug         = true        # Symbols for flamegraph