[package]
name    = "sg-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sg-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf     = { workspace = true }
aya-log-ebpf = { workspace = true }
sg-common    = { workspace = true }

[features]
default = []

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"